# tsfoundations

./: .cursorrules  .gitignore  README.md  pyproject.toml
data/mc/: agentic-ai.xlsx  gai.xlsx  ml.xlsx
data/ss/: agentic-ai.xlsx  gai.xlsx  ml.xlsx
notebooks/: agentic_ai_forecasting.py  forecasting.ipynb
results/: agentic_ai_forecasting_results.csv  prediction_summary.csv
tests/: __init__.py
tsfoundations/: __init__.py
